oosParser.py
# Generated from oos.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class oosParser ( Parser ):

    grammarFileName = "oos.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'('", "','", "')'", "':'", 
                     "'main'", "'Main'", "';'", "'def'", "'__init__'", "'int'", 
                     "'-'", "'self'", "'self.'", "'='", "'.'", "'if'", "'endif'", 
                     "'else'", "'while'", "'endwhile'", "'return'", "'input'", 
                     "'print'", "'or'", "'+'", "'and'", "'*'", "'/'", "'not'", 
                     "'['", "']'", "'=='", "'<='", "'>='", "'>'", "'<'", 
                     "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WS", "COMMENTS", 
                      "ID", "INTEGER" ]

    RULE_startRule = 0
    RULE_classes = 1
    RULE_class_def = 2
    RULE_class_main_def = 3
    RULE_class_name = 4
    RULE_declarations = 5
    RULE_class_body = 6
    RULE_main_body = 7
    RULE_decl_line = 8
    RULE_constructor_def = 9
    RULE_method_def = 10
    RULE_method_main_def = 11
    RULE_types = 12
    RULE_parameters = 13
    RULE_method_body = 14
    RULE_return_type = 15
    RULE_parlist = 16
    RULE_statements = 17
    RULE_statement = 18
    RULE_assignment_stat = 19
    RULE_direct_call_stat = 20
    RULE_if_stat = 21
    RULE_else_part = 22
    RULE_while_stat = 23
    RULE_return_stat = 24
    RULE_input_stat = 25
    RULE_print_stat = 26
    RULE_expression = 27
    RULE_arguments = 28
    RULE_condition = 29
    RULE_optional_sign = 30
    RULE_term = 31
    RULE_add_oper = 32
    RULE_arglist = 33
    RULE_boolterm = 34
    RULE_factor = 35
    RULE_mul_oper = 36
    RULE_argitem = 37
    RULE_boolfactor = 38
    RULE_func_call = 39
    RULE_constructor_call = 40
    RULE_rel_oper = 41

    ruleNames =  [ "startRule", "classes", "class_def", "class_main_def", 
                   "class_name", "declarations", "class_body", "main_body", 
                   "decl_line", "constructor_def", "method_def", "method_main_def", 
                   "types", "parameters", "method_body", "return_type", 
                   "parlist", "statements", "statement", "assignment_stat", 
                   "direct_call_stat", "if_stat", "else_part", "while_stat", 
                   "return_stat", "input_stat", "print_stat", "expression", 
                   "arguments", "condition", "optional_sign", "term", "add_oper", 
                   "arglist", "boolterm", "factor", "mul_oper", "argitem", 
                   "boolfactor", "func_call", "constructor_call", "rel_oper" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    WS=39
    COMMENTS=40
    ID=41
    INTEGER=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classes(self):
            return self.getTypedRuleContext(oosParser.ClassesContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_startRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartRule" ):
                listener.enterStartRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartRule" ):
                listener.exitStartRule(self)




    def startRule(self):

        localctx = oosParser.StartRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.classes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_main_def(self):
            return self.getTypedRuleContext(oosParser.Class_main_defContext,0)


        def EOF(self):
            return self.getToken(oosParser.EOF, 0)

        def class_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(oosParser.Class_defContext)
            else:
                return self.getTypedRuleContext(oosParser.Class_defContext,i)


        def getRuleIndex(self):
            return oosParser.RULE_classes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClasses" ):
                listener.enterClasses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClasses" ):
                listener.exitClasses(self)




    def classes(self):

        localctx = oosParser.ClassesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 86
                    self.class_def() 
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 92
            self.class_main_def()
            self.state = 93
            self.match(oosParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(oosParser.Class_nameContext)
            else:
                return self.getTypedRuleContext(oosParser.Class_nameContext,i)


        def declarations(self):
            return self.getTypedRuleContext(oosParser.DeclarationsContext,0)


        def class_body(self):
            return self.getTypedRuleContext(oosParser.Class_bodyContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_class_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_def" ):
                listener.enterClass_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_def" ):
                listener.exitClass_def(self)




    def class_def(self):

        localctx = oosParser.Class_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(oosParser.T__0)
            self.state = 96
            self.class_name()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 97
                self.match(oosParser.T__1)
                self.state = 98
                self.class_name()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 99
                    self.match(oosParser.T__2)
                    self.state = 100
                    self.class_name()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 106
                self.match(oosParser.T__3)


            self.state = 110
            self.match(oosParser.T__4)
            self.state = 111
            self.declarations()
            self.state = 112
            self.class_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_main_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(oosParser.DeclarationsContext,0)


        def main_body(self):
            return self.getTypedRuleContext(oosParser.Main_bodyContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_class_main_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_main_def" ):
                listener.enterClass_main_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_main_def" ):
                listener.exitClass_main_def(self)




    def class_main_def(self):

        localctx = oosParser.Class_main_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_main_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(oosParser.T__0)
            self.state = 115
            _la = self._input.LA(1)
            if not(_la==6 or _la==7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 116
            self.match(oosParser.T__4)
            self.state = 117
            self.declarations()
            self.state = 118
            self.main_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(oosParser.ID, 0)

        def getRuleIndex(self):
            return oosParser.RULE_class_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_name" ):
                listener.enterClass_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_name" ):
                listener.exitClass_name(self)




    def class_name(self):

        localctx = oosParser.Class_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(oosParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(oosParser.Decl_lineContext)
            else:
                return self.getTypedRuleContext(oosParser.Decl_lineContext,i)


        def getRuleIndex(self):
            return oosParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)




    def declarations(self):

        localctx = oosParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declarations)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 122
                self.decl_line()
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 123
                        self.match(oosParser.T__7)
                        self.state = 124
                        self.decl_line() 
                    self.state = 129
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                self.state = 130
                self.match(oosParser.T__7)
                self.state = 131
                self.match(oosParser.T__7)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constructor_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(oosParser.Constructor_defContext)
            else:
                return self.getTypedRuleContext(oosParser.Constructor_defContext,i)


        def method_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(oosParser.Method_defContext)
            else:
                return self.getTypedRuleContext(oosParser.Method_defContext,i)


        def getRuleIndex(self):
            return oosParser.RULE_class_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_body" ):
                listener.enterClass_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_body" ):
                listener.exitClass_body(self)




    def class_body(self):

        localctx = oosParser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_class_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 135
                    self.constructor_def()
                    self.state = 136
                    self.match(oosParser.T__7)
                    self.state = 137
                    self.match(oosParser.T__7)

                else:
                    raise NoViableAltException(self)
                self.state = 141 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 143
                self.method_def()
                self.state = 144
                self.match(oosParser.T__7)
                self.state = 145
                self.match(oosParser.T__7)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_main_def(self):
            return self.getTypedRuleContext(oosParser.Method_main_defContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_main_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_body" ):
                listener.enterMain_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_body" ):
                listener.exitMain_body(self)




    def main_body(self):

        localctx = oosParser.Main_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_main_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.method_main_def()
            self.state = 153
            self.match(oosParser.T__7)
            self.state = 154
            self.match(oosParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_lineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(oosParser.TypesContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(oosParser.ID)
            else:
                return self.getToken(oosParser.ID, i)

        def getRuleIndex(self):
            return oosParser.RULE_decl_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_line" ):
                listener.enterDecl_line(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_line" ):
                listener.exitDecl_line(self)




    def decl_line(self):

        localctx = oosParser.Decl_lineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_decl_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.types()
            self.state = 157
            self.match(oosParser.ID)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 158
                self.match(oosParser.T__2)
                self.state = 159
                self.match(oosParser.ID)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constructor_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameters(self):
            return self.getTypedRuleContext(oosParser.ParametersContext,0)


        def class_name(self):
            return self.getTypedRuleContext(oosParser.Class_nameContext,0)


        def declarations(self):
            return self.getTypedRuleContext(oosParser.DeclarationsContext,0)


        def method_body(self):
            return self.getTypedRuleContext(oosParser.Method_bodyContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_constructor_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructor_def" ):
                listener.enterConstructor_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructor_def" ):
                listener.exitConstructor_def(self)




    def constructor_def(self):

        localctx = oosParser.Constructor_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constructor_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(oosParser.T__8)
            self.state = 166
            self.match(oosParser.T__9)
            self.state = 167
            self.parameters()
            self.state = 168
            self.match(oosParser.T__4)
            self.state = 169
            self.class_name()
            self.state = 170
            self.declarations()
            self.state = 171
            self.method_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(oosParser.ID, 0)

        def parameters(self):
            return self.getTypedRuleContext(oosParser.ParametersContext,0)


        def declarations(self):
            return self.getTypedRuleContext(oosParser.DeclarationsContext,0)


        def method_body(self):
            return self.getTypedRuleContext(oosParser.Method_bodyContext,0)


        def class_name(self):
            return self.getTypedRuleContext(oosParser.Class_nameContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_method_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_def" ):
                listener.enterMethod_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_def" ):
                listener.exitMethod_def(self)




    def method_def(self):

        localctx = oosParser.Method_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_method_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(oosParser.T__8)
            self.state = 174
            self.match(oosParser.ID)
            self.state = 175
            self.parameters()
            self.state = 176
            self.match(oosParser.T__4)
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.state = 177
                self.match(oosParser.T__10)
                pass
            elif token in [12]:
                self.state = 178
                self.match(oosParser.T__11)
                pass
            elif token in [41]:
                self.state = 179
                self.class_name()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 182
            self.declarations()
            self.state = 183
            self.method_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_main_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(oosParser.DeclarationsContext,0)


        def method_body(self):
            return self.getTypedRuleContext(oosParser.Method_bodyContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_method_main_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_main_def" ):
                listener.enterMethod_main_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_main_def" ):
                listener.exitMethod_main_def(self)




    def method_main_def(self):

        localctx = oosParser.Method_main_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_method_main_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(oosParser.T__8)
            self.state = 186
            self.match(oosParser.T__5)
            self.state = 187
            self.match(oosParser.T__1)
            self.state = 188
            self.match(oosParser.T__12)
            self.state = 189
            self.match(oosParser.T__3)
            self.state = 190
            self.match(oosParser.T__4)
            self.state = 191
            self.match(oosParser.T__11)
            self.state = 192
            self.declarations()
            self.state = 193
            self.method_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_name(self):
            return self.getTypedRuleContext(oosParser.Class_nameContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)




    def types(self):

        localctx = oosParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_types)
        try:
            self.state = 197
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.class_name()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.match(oosParser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parlist(self):
            return self.getTypedRuleContext(oosParser.ParlistContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = oosParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_parameters)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.match(oosParser.T__1)
            self.state = 200
            self.parlist()
            self.state = 201
            self.match(oosParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(oosParser.DeclarationsContext,0)


        def statements(self):
            return self.getTypedRuleContext(oosParser.StatementsContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_method_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_body" ):
                listener.enterMethod_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_body" ):
                listener.exitMethod_body(self)




    def method_body(self):

        localctx = oosParser.Method_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_method_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.declarations()
            self.state = 205
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199053811712) != 0):
                self.state = 204
                self.statements()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(oosParser.TypesContext,0)


        def getRuleIndex(self):
            return oosParser.RULE_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_type" ):
                listener.enterReturn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_type" ):
                listener.exitReturn_type(self)




    def return_type(self):

        localctx = oosParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_return_type)
        try:
            self.state = 209
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 207
                self.types()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 208
                self.match(oosParser.T__11)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(oosParser.TypesContext)
            else:
                return self.getTypedRuleContext(oosParser.TypesContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(oosParser.ID)
            else:
                return self.getToken(oosParser.ID, i)

        def getRuleIndex(self):
            return oosParser.RULE_parlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParlist" ):
                listener.enterParlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParlist" ):
                listener.exitParlist(self)




    def parlist(self):
